# cooking-recipes-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  heroku.yml  license  main.py  pyproject.toml  readme.md
cooking_assistant/: main.py  try_out.py
cooking_assistant/app/: main.py
cooking_assistant/database/: db_manager.py
cooking_assistant/models/: receipt.py  recipe_models.py
cooking_assistant/prompting/: image_generator.py  prompt_utils.py  recipe_gen_manager.py
cooking_assistant/prompting/textual_prompts/: prompt_generate_dish_photo  prompt_parse_url_recipe  prompt_translate_summary
cooking_assistant/recipe/: recipe_manager.py  utils.py
cooking_assistant/utils/: generate_photos.py  prompt_manager.py  web_utils.py
cooking_assistant/utils/dish_images/: bread_image.txt  burger_image.txt  cheese_image.txt  curry_image.txt  dessert_image.txt  drink_image.txt  egg_image.txt  fish_image.txt  fruit_image.txt  meat_image.txt  noodles_image.txt  pasta_image.txt  pizza_image.txt  rice_image.txt  salad_image.txt  sandwich_image.txt  snack_image.txt  soup_image.txt  stew_image.txt  vegan_image.txt
cooking_assistant/utils/openai_prompts/: prompt_generate_dish_photo  prompt_parse_url_recipe
cooking_assistant/web/: tiktok.py  web_utils.py
cooking_assistant_app/: main.py
cooking_assistant_app/api/: app.py
cooking_assistant_app/models/: receipt.py
models/: receipt.py
openai_prompts/: prompt_parse_url_recipe
utils/: prompt_manager.py  web_utils.py
