[tool.poetry]
name = "cooking-recipes-assistant"
version = "0.1.0"
description = ""
authors = ["Ivan Kalinchuk <ivan.cojez@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.58.1"
instructor = "^1.7.2"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
fastapi = {version = "^0.115.6", extras = ["all"]}
pyktok = "^0.0.30"
moviepy = "^2.1.1"
firebase-admin = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.12.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[flake8]
max-line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
